--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,6 @@ body {
 /*--------- Header--------- */
 .header{
   color: var(--border-color);
-  padding-top: 24px;
-  padding-bottom: 25px;
   border-bottom: 1px solid; 
 }
 .header-container{
@@ -98,6 +96,7 @@ display: flex;
   justify-content: center;
   align-items: center;
   margin-left: auto;
+  
 }
 .mail-icon-envelope{
   width: 16px;
@@ -142,8 +141,31 @@ display: flex;
   margin-right: 50px;
 }
 
-.menu .menu-link.current {
-   color: var(--accent-color);
+
+
+
+.menu .current-link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current-link::after{
+  position: absolute;
+    content: '';
+    display: block;
+    width: 48px;
+    height: 4px;
+    margin-top: 30px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
 }
 
 .logo-blue{
@@ -165,6 +187,7 @@ letter-spacing: 0.03em;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -180,7 +203,7 @@ letter-spacing: 0.03em;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-secondary-color);
-  
+  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-link:hover,
@@ -194,6 +217,7 @@ letter-spacing: 0.03em;
   line-height: 1.14;
   letter-spacing: 0.02em;
    color: var(--primary-secondary-color);
+   transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tel-link:hover,
@@ -309,6 +333,27 @@ letter-spacing: 0.03em;
   margin-left: 30px;
   margin-top: 30px;
 }
+.work-img-wrapper{
+  position: relative;
+  overflow: hidden;
+}
+.work-overlay{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  font-weight: 700;
+ font-size: 14px;
+ line-height: 1.14;
+ text-align: center;
+ letter-spacing: 0.03em;
+ text-transform: uppercase;
+ color: var(--primary-white-color);
+ background: rgba(47, 48, 58, 0.8);
+ padding: 30px 0px 27px 0px;
+}
+
+
 
 /* ===========end-work================== */
 
@@ -366,9 +411,10 @@ letter-spacing: 0.03em;
   width: 44px;
   height: 44px;
   background-color:var(--primary-white-color);
-
   border-radius: 50%;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 } 
 
 .social-list-link:hover,
@@ -381,6 +427,7 @@ background-color: var(--accent-color);
   width: 20px;
   height: 20px;
    fill:#AFB1B8; 
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-link:hover .social-list-icon,
 .social-list-link:focus .social-list-icon{
@@ -413,6 +460,7 @@ margin-bottom: 50px;
   cursor: pointer;
   border: 1px solid #AFB1B8;
   border-radius: 3%;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .clients-list-link:hover,
@@ -428,6 +476,7 @@ fill: var(--accent-color);
 
 .clients-link-icon{
   fill:#AFB1B8; 
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -459,7 +508,12 @@ letter-spacing: 0.03em;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.address-link:hover,
+.address-link:focus {
+  color: var(--accent-color);
 }
 .address-tel-link {
   font-family: "Roboto", sans-serif;
@@ -469,7 +523,11 @@ letter-spacing: 0.03em;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.address-tel-link:hover,
+.address-tel-link:focus {
+  color: var(--accent-color);
 }
 .address-mail-link {
 font-style: normal;
@@ -477,9 +535,14 @@ font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
  color: rgba(255, 255, 255, 0.6);
+ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
+.address-mail-link:hover,
+.address-mail-link:focus {
+  color: var(--accent-color);
+}
 .footer{
    padding-top: 60px;
    padding-bottom: 60px;
@@ -523,7 +586,8 @@ margin-bottom: 20px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   cursor: pointer;
-} 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .footer-social-link:hover,
 .footer-social-link:focus{
@@ -538,7 +602,6 @@ background-color: var(--accent-color);
   width: 20px;
   height: 20px;
    fill: var(--primary-white-color);
-
 }
 
  /* ==========end footer=========== */
@@ -557,6 +620,7 @@ letter-spacing: 0.03em;
  padding: 6px 22px;
  border:transparent;
  background-color: transparent;
+ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filters-item-bth:hover,
 .filters-item-bth:focus{
@@ -575,17 +639,20 @@ letter-spacing: 0.03em;
 }
 .filters-item:not(:last-child){
   margin-right: 8px;
+  
 }
  .project-title{
 font-size: 18px;
 line-height: 2.0;
 letter-spacing: 0.06em;
+color: var(--title-text-color);
  }
  .project-content-list{
   padding: 20px 24px;
   border-right: 1px solid #EEEEEE;
   border-left: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
+  
  }
  .projects{
   display: flex;
@@ -596,6 +663,7 @@ letter-spacing: 0.06em;
    0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06), 
     1px 4px 6px rgba(0, 0, 0, 0.16);
+    
 }
  .projects-list{
   flex-basis: calc((100% - 90px) / 3);
@@ -607,8 +675,93 @@ letter-spacing: 0.06em;
 font-size: 16px;
 line-height: 1.87;
 letter-spacing: 0.03em;
+color: var(--primary-text-color);
 }
+
+.projects-list-img-wrapper{
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  background: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+  color: var(--primary-white-color);
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.projects-list-link-wrapper:hover .overlay,
+.projects-list-link-wrapper:focus .overlay {
+  transform: translateY(0%);
+}
+
+
+
 /* ===================== end main==================== */
+
+
+/* ============================== Modal Window=================== */
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 100;
+  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden{
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+ width: 528px;
+ height: 580px;
+ background: var(--primary-white-color);
+  border-radius: 4%;
+
+}
+.modal-close-bth{
+ position: absolute;
+ top: 8px;
+ right: 8px;
+  width: 30px;
+  height: 30px;
+  background: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 0;
+} 
+
+.modal-close-bth-icon{
+  width: 18px;
+  height: 18px;
+   fill: var(--primary-text-color);
+}
+  
+
+
+
+/* ======================End Modal Window=====================< */
 
 
 
