--- a/css/style.css
+++ b/css/style.css
@@ -619,12 +619,12 @@ letter-spacing: 0.03em;
  cursor: pointer;
  padding: 6px 22px;
  border:transparent;
- background-color: transparent;
- transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filters-item-bth:hover,
 .filters-item-bth:focus{
-  color: var(--accent-color);
+  background-color: var(--accent-color);
+  color:  var(--primary-white-color);
 }
 
 .filters-list{
