--- a/css/style.css
+++ b/css/style.css
@@ -142,9 +142,8 @@ display: flex;
 }
 
 
-
-
 .menu .current-link {
+  position: relative;
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -159,9 +158,11 @@ display: flex;
 
 .current-link::after{
   position: absolute;
+    left: 0;
+    bottom: -1px;
     content: '';
     display: block;
-    width: 48px;
+    width: 100%;
     height: 4px;
     margin-top: 30px;
     background-color: var(--accent-color);
@@ -183,6 +184,8 @@ letter-spacing: 0.03em;
 .menu-link
 {
   color: var(--primary-text-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -198,6 +201,8 @@ letter-spacing: 0.03em;
 
 .mail-link{
   color: var(--primary-text-color);
+ padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -212,6 +217,8 @@ letter-spacing: 0.03em;
 }
 
 .tel-link{
+    padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -236,6 +243,7 @@ letter-spacing: 0.03em;
   cursor: pointer;
   letter-spacing: 0.06em;
   border-radius: 4px;
+  border: none;
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--primary-white-color);
@@ -413,7 +421,7 @@ letter-spacing: 0.03em;
   background-color:var(--primary-white-color);
   border-radius: 50%;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 } 
 
@@ -460,7 +468,7 @@ margin-bottom: 50px;
   cursor: pointer;
   border: 1px solid #AFB1B8;
   border-radius: 3%;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .clients-list-link:hover,
@@ -508,7 +516,7 @@ letter-spacing: 0.03em;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .address-link:hover,
