--- a/css/style.css
+++ b/css/style.css
@@ -101,35 +101,37 @@ display: flex;
 .mail-icon-envelope{
   width: 16px;
   height: 12px;
-  fill:#757575;
+  fill: var(--primary-secondary-color);
   margin-right: 10px;
   cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mail-icon-vector{
   width: 10px;
   height: 16px;
-  fill:#757575;
+  fill: var(--primary-secondary-color);
   margin-right: 10px;
   cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mail-link:hover 
 .mail-link:focus {
- fill: #2196F3;
+ fill: var(--accent-color);
 }
 
 .mail-link:hover .mail-icon-envelope,
 .mail-link:focus .mail-icon-envelope {
- fill: #2196F3;
+ fill: var(--accent-color);
 }
 
 .tel-link:hover 
 .tel-link:focus {
- fill: #2196F3;
+ fill: var(--accent-color);
 }
 
 .tel-link:hover .mail-icon-vector,
 .tel-link:focus .mail-icon-vector {
- fill: #2196F3;
+ fill: var(--accent-color);
 }
 
 
@@ -190,7 +192,7 @@ letter-spacing: 0.03em;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -208,7 +210,7 @@ letter-spacing: 0.03em;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-secondary-color);
-  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-link:hover,
@@ -224,7 +226,7 @@ letter-spacing: 0.03em;
   line-height: 1.14;
   letter-spacing: 0.02em;
    color: var(--primary-secondary-color);
-   transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tel-link:hover,
@@ -318,6 +320,7 @@ letter-spacing: 0.03em;
   width: 270px;
   background-color: #F5F4FA;
   margin-bottom: 30px;
+  border-radius: 4%;
 }
 
 .features-list-item:not(:last-child){
@@ -345,11 +348,15 @@ letter-spacing: 0.03em;
   position: relative;
   overflow: hidden;
 }
-.work-overlay{
+.work-label{
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 700;
  font-size: 14px;
  line-height: 1.14;
@@ -358,7 +365,6 @@ letter-spacing: 0.03em;
  text-transform: uppercase;
  color: var(--primary-white-color);
  background: rgba(47, 48, 58, 0.8);
- padding: 30px 0px 27px 0px;
 }
 
 
@@ -421,7 +427,7 @@ letter-spacing: 0.03em;
   background-color:var(--primary-white-color);
   border-radius: 50%;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 } 
 
@@ -468,12 +474,12 @@ margin-bottom: 50px;
   cursor: pointer;
   border: 1px solid #AFB1B8;
   border-radius: 3%;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .clients-list-link:hover,
 .clients-list-link:focus{
-border: 1px solid #2196F3;
+border: 1px solid var(--accent-color);
 }
 
 .clients-list-link:hover  .clients-link-icon,
@@ -626,13 +632,19 @@ line-height: 1.62;
 letter-spacing: 0.03em;
  cursor: pointer;
  padding: 6px 22px;
- border:transparent;
+ border-radius: 4px;
+ background-color: #f5f4fa;
+ border: none;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filters-item-bth:hover,
 .filters-item-bth:focus{
   background-color: var(--accent-color);
   color:  var(--primary-white-color);
+  box-shadow: 
+0px 3px 1px rgba(0, 0, 0, 0.1), 
+0px 1px 2px rgba(0, 0, 0, 0.08), 
+0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filters-list{
@@ -640,10 +652,6 @@ letter-spacing: 0.03em;
   justify-content: center;
   align-items: center;
   margin-bottom: 50px;
-  box-shadow: 
-0px 3px 1px rgba(0, 0, 0, 0.1), 
-0px 1px 2px rgba(0, 0, 0, 0.08), 
-0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .filters-item:not(:last-child){
   margin-right: 8px;
@@ -667,16 +675,22 @@ color: var(--title-text-color);
   flex-wrap: wrap;
    margin-left: -30px;
    margin-top: -30px;
-   box-shadow: 
-   0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06), 
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-    
+  
 }
  .projects-list{
   flex-basis: calc((100% - 90px) / 3);
   margin-left: 30px;
   margin-top: 30px;
+ }
+ .projects-list-link-wrapper{
+   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ .projects-list-link-wrapper:hover,
+ .projects-list-link-wrapper:focus{
+  box-shadow:
+    0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06), 
+    1px 4px 6px rgba(0, 0, 0, 0.16);
  }
 
 .description{
@@ -727,7 +741,7 @@ color: var(--primary-text-color);
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
   z-index: 100;
-  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden{
@@ -748,9 +762,12 @@ color: var(--primary-text-color);
 
 }
 .modal-close-bth{
- position: absolute;
- top: 8px;
- right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
   width: 30px;
   height: 30px;
   background: transparent;
