--- a/css/style.css
+++ b/css/style.css
@@ -692,17 +692,10 @@ color: var(--title-text-color);
   flex-basis: calc((100% - 90px) / 3);
   margin-left: 30px;
   margin-top: 30px;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
- .projects-list:hover,
- .projects-list:focus{
-   color: var(--accent-color);
-   box-shadow:
-    0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06), 
-    1px 4px 6px rgba(0, 0, 0, 0.16);
- }
+ 
  .projects-list-link-wrapper{
+   display: block;
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  .projects-list-link-wrapper:hover,
